@@ -1,5 +1,7 @@
 = HEAD
 
+* Ignore anonymous classes/modules (jeremyevans)
+
 * Log when attempting to remove a constant that doesn't exist (jeremyevans)
 
 * Allow specifying constants to remove via a block to require, instead of using ObjectSpace (jeremyevans)
